# autonav-trainer-simulator

./: .gitignore  README.md  config.py  download_weights.sh  main.py  pyproject.toml  self_driving_cnn_vs_ltc.ipynb
.kiro/specs/self-driving-3d-simulator/: design.md  requirements.md  tasks.md
engine/: haze.py  scene.py  vehicle.py
hud/: dashboard.py
models/: cnn_model.py  inference.py  ltc_model.py
tests/: test_properties.py  test_units.py
xai/: deeplift.py  visualizer.py
